<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/serviceEnabledKey"
            android:title="@string/title"
            android:summary="@string/summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Active Vortex">

        <ListPreference
            android:defaultValue="1"
            android:key="@string/vortexKey"
            android:title="Vortex"
            android:summary="Change vortex"
            android:entries="@array/colors"
            android:entryValues="@array/vortexColors" />
    </PreferenceCategory>
</PreferenceScreen>